# MathTrainer

./: .ruff.toml  LICENSE  MANIFEST.in  README.md  index.html  logic.py  main.py  math-trainer  math-trainer.desktop  pyproject.toml  script.js  style.css  styles.css  translations.js  translations.json  ui.py  ui.ui
debian/: changelog  control  copyright  rules
locales/: ui_uk.ts
math_trainer/: main.py
math_trainer/locales/: ui_de.qm  ui_fr.qm  ui_uk.qm
src/math_trainer/: main.py
src/math_trainer/locales/: ui_ru.qm
translations/: ui_de.ts  ui_fr.ts  ui_ru.ts
